--- a/14LongestCommonPrefix.ipynb
+++ b/14LongestCommonPrefix.ipynb
@@ -37,8 +37,123 @@
    "source": [
     "class Solution:\n",
     "    def longestCommonPrefix(self, strs):\n",
-    "        \n",
-    "        return strs"
+    "        pref = ''\n",
+    "        short = min(strs, key=len)\n",
+    "        for i in range(len(short),0,-1):\n",
+    "            short1 = short[:i]\n",
+    "            if ([short1 in word[:len(short1)] for word in strs] == [True] * len(strs)):\n",
+    "                pref = short1\n",
+    "                return pref\n",
+    "\n",
+    "            if short1 == '':\n",
+    "                pref = ''\n",
+    "        return pref"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fl'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strs = ['flower', 'flow', 'flight']\n",
+    "x = Solution()\n",
+    "x.longestCommonPrefix(strs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strs = [\"dog\",\"racecar\",\"car\"]\n",
+    "x.longestCommonPrefix(strs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strs = [\"a\",\"f\"]\n",
+    "x.longestCommonPrefix(strs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strs = [\"\"]\n",
+    "x.longestCommonPrefix(strs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strs = [\"reflower\", \"flow\", \"flight\"]\n",
+    "x.longestCommonPrefix(strs)"
    ]
   },
   {
