--- a/5palindrome_Substring.ipynb
+++ b/5palindrome_Substring.ipynb
@@ -9,46 +9,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-1-317d0523bb2f>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-317d0523bb2f>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def longestPalindrome(self, s: str) -> str:\n",
-    "        "
+    "        # TWO TYPES EVEN AND ODD\n",
+    "        # WILL TAKE A CENTER AND MOVE OUTWORDS CHECKING THE PALENDROME CONDITION\n",
+    "        \n",
+    "        def check(i,j):\n",
+    "            while i >= 0  and j < len(s) and s[i] == s[j]:\n",
+    "                j += 1\n",
+    "                i -= 1\n",
+    "                \n",
+    "            return s[i+1:j]\n",
+    "\n",
+    "        res = ''\n",
+    "\n",
+    "        for i in range(len(s)):\n",
+    "            res =  max(res,check(i,i+1),check(i,i),key=len)\n",
+    "            \n",
+    "        return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 1, 3, 55.2]"
+       "'bab'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res = []\n",
-    "for sample in numlists:\n",
-    "    sample.sort()\n",
-    "    res.extend([sample[-5]])\n",
-    "res"
+    "s = \"babad\"\n",
+    "Solution().longestPalindrome(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bb'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"cbbd\"\n",
+    "Solution().longestPalindrome(s)"
    ]
   },
   {
