bst data structure

--- a/144BinaryTreePreorderTraversal.ipynb
+++ b/144BinaryTreePreorderTraversal.ipynb
@@ -1,29 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Given the root of a binary tree, return the inorder traversal of its nodes' values.\n",
-    "\n",
-    "Input: root = [1,null,2,3]\n",
-    "Output: [1,3,2]\n",
-    "\n",
-    "Input: root = []\n",
-    "Output: []\n",
-    "\n",
-    "Input: root = [1]\n",
-    "Output: [1]\n",
-    "\n",
-    "Constraints:\n",
-    "\n",
-    "- The number of nodes in the tree is in the range [0, 100].\n",
-    "- -100 <= Node.val <= 100"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,28 +11,14 @@
     "    def __init__(self, val=0, left=None, right=None):\n",
     "        self.val = val\n",
     "        self.left = left\n",
-    "        self.right = right"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        self.right = right\n",
+    "\n",
     "root = TreeNode(val = 3, left = \n",
     "    TreeNode(val= 9, left= None, right= None), right= \n",
     "    TreeNode(val= 20, left = \n",
     "    TreeNode(val= 15, left= None, right= None), right = \n",
-    "    TreeNode(val= 7, left= None, right = None))) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    TreeNode(val= 7, left= None, right = None))) \n",
+    "\n",
     "class Solution:\n",
     "    def inorderTraversal(self, root):\n",
     "        res = []\n",
@@ -61,23 +26,23 @@
     "        return res\n",
     "    def helper(self, root, res):\n",
     "        if root:\n",
-    "            self.helper(root.left, res)\n",
     "            res.append(root.val)\n",
-    "            self.helper(root.right, res)\n"
+    "            self.helper(root.left, res)\n",
+    "            self.helper(root.right, res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[9, 3, 15, 20, 7]"
+       "[3, 9, 20, 15, 7]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,6 +51,13 @@
     "x = Solution()\n",
     "x.inorderTraversal(root)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
