--- a/104MaximumBinaryDepth.ipynb
+++ b/104MaximumBinaryDepth.ipynb
@@ -4,26 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the root of a binary tree, return the inorder traversal of its nodes' values.\n",
+    "Given the root of a binary tree, return its maximum depth.\n",
     "\n",
-    "Input: root = [1,null,2,3]\n",
-    "Output: [1,3,2]\n",
+    "A binary tree's maximum depth is the number of nodes along the longest path from the root node down to the farthest leaf node.\n",
     "\n",
-    "Input: root = []\n",
-    "Output: []\n",
+    "Input: root = [3,9,20,null,null,15,7]\n",
+    "Output: 3\n",
     "\n",
-    "Input: root = [1]\n",
-    "Output: [1]\n",
+    "Input: root = [1,null,2]\n",
+    "Output: 2\n",
     "\n",
     "Constraints:\n",
     "\n",
-    "- The number of nodes in the tree is in the range [0, 100].\n",
-    "- -100 <= Node.val <= 100"
+    "The number of nodes in the tree is in the range [0, 104].\n",
+    "-100 <= Node.val <= 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,47 +44,48 @@
     "    TreeNode(val= 9, left= None, right= None), right= \n",
     "    TreeNode(val= 20, left = \n",
     "    TreeNode(val= 15, left= None, right= None), right = \n",
-    "    TreeNode(val= 7, left= None, right = None))) "
+    "    TreeNode(val= 7, left= None, right = None)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def inorderTraversal(self, root):\n",
-    "        res = []\n",
-    "        self.helper(root, res)\n",
-    "        return res\n",
-    "    def helper(self, root, res):\n",
-    "        if root:\n",
-    "            self.helper(root.left, res)\n",
-    "            res.append(root.val)\n",
-    "            self.helper(root.right, res)\n"
+    "def depth(root):\n",
+    "    if not root: return 0\n",
+    "    maxLeft = depth(root.left)\n",
+    "    maxRight = depth(root.right)\n",
+    "    return max(maxLeft,maxRight) + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[9, 3, 15, 20, 7]"
+       "3"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = Solution()\n",
-    "x.inorderTraversal(root)"
+    "depth(root)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
