--- a/69sqrtX.ipynb
+++ b/69sqrtX.ipynb
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "447"
+       "100000"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,22 +76,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## binary search method\n",
+    "\n",
+    "# condition: if k^2 > x: then k-1 is the int(sqrt) we want to return\n",
+    "# range of values: 0 to n\n",
+    "class Solution:\n",
+    "    def mySqrt(self, x: int) -> int:\n",
+    "        left = 0\n",
+    "        right = x + 1\n",
+    "        while left < right:\n",
+    "            mid = left + (right-left)//2\n",
+    "            if mid * mid > x:\n",
+    "                right = mid\n",
+    "            else:\n",
+    "                left = mid + 1\n",
+    "        return left - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "5"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x.mySqrt(0)"
+    "x = Solution()\n",
+    "x.mySqrt(25)"
    ]
   },
   {
