--- a/8String2Integer.ipynb
+++ b/8String2Integer.ipynb
@@ -23,12 +23,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def atoi(s):\n",
-    "    return s"
+    "    res = \"\"\n",
+    "    sign = \"\"\n",
+    "    for i in s:\n",
+    "        if i == ' ':\n",
+    "            continue\n",
+    "        if i == '+' or i == '-':\n",
+    "            sign = i\n",
+    "        if i.isdigit():\n",
+    "            res += i\n",
+    "        if not i.isdigit() and res:\n",
+    "            break\n",
+    "    return int(sign + res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4193"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"4193 with words\")"
    ]
   },
   {
