--- a/21-Merge-Sorted-Lists.ipynb
+++ b/21-Merge-Sorted-Lists.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You are given the heads of two sorted linked lists list1 and list2.\n",
+    "\n",
+    "Merge the two lists in a one sorted list. The list should be made by splicing together the nodes of the first two lists.\n",
+    "\n",
+    "Return the head of the merged linked list."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +23,60 @@
     "        self.next = next\n",
     "\n",
     "class Solution:\n",
-    "    def mergeTwoLists(self, list1,list2):\n",
+    "    def mergeTwoLists(self,list1,list2):\n",
     "        return 1\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list1 = [1,2,4] \n",
-    "list2 = [1,3,4]"
+    "l1 = ListNode(val = 1, next = ListNode(val = 2, next = ListNode(val = 4, next= None)))\n",
+    "l2 = ListNode(val = 1, next = ListNode(val = 3, next = ListNode(val = 4, next= None)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def mergeTwoLists(self, list1, list2):\n",
+    "        cur = dummy = ListNode()\n",
+    "        while list1 and list2:               \n",
+    "            if list1.val < list2.val:\n",
+    "                cur.next = list1\n",
+    "                list1, cur = list1.next, list1\n",
+    "            else:\n",
+    "                cur.next = list2\n",
+    "                list2, cur = list2.next, list2\n",
+    "        if list1 or list2:\n",
+    "            cur.next = list1 if list1 else list2\n",
+    "        return dummy.next\n",
+    "\n",
+    "x = Solution()\n",
+    "res = x.mergeTwoLists(l1,l2)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res.val,res.next.val, res.next.next.val)"
    ]
   },
   {
