--- a/8String2Integer.ipynb
+++ b/8String2Integer.ipynb
@@ -8,22 +8,39 @@
     "\n",
     "The algorithm for myAtoi(string s) is as follows:\n",
     "\n",
-    "Read in and ignore any leading whitespace.\\\n",
-    "Check if the next character (if not already at the end of the string) is '-' or '+'. Read this character in if it is either. This determines if the final result is negative or positive respectively. Assume the result is positive if neither is present.\\\n",
-    "Read in next the characters until the next non-digit character or the end of the input is reached. The rest of the string is ignored.\n",
-    "Convert these digits into an integer (i.e. \"123\" -> 123, \"0032\" -> 32). If no digits were read, then the integer is 0. Change the sign as necessary (from step 2).\\\n",
-    "If the integer is out of the 32-bit signed integer range [-231, 231 - 1], then clamp the integer so that it remains in the range. Specifically, integers less than -231 should be clamped to -231, and integers greater than 231 - 1 should be clamped to 231 - 1.\\\n",
-    "Return the integer as the final result.\\\n",
+    "- Read in and ignore any leading whitespace.\n",
+    "  \n",
+    "- Check if the next character (if not already at the end of the string) is '-' or '+'. Read this character in if it is either. This determines if the final result is negative or positive respectively. Assume the result is positive if neither is present.\n",
+    "  \n",
+    "- Read in next the characters until the next non-digit character or the end of the input is reached. The rest of the string is ignored.\n",
+    "  \n",
+    "- Convert these digits into an integer (i.e. \"123\" -> 123, \"0032\" -> 32). If no digits were read, then the integer is 0. Change the sign as necessary (from step 2).\n",
+    "  \n",
+    "- If the integer is out of the 32-bit signed integer range $[-2^{31}, 2^{31} - 1]$, then clamp the integer so that it remains in the range. Specifically, integers less than $-2^{31}$ should be clamped to $-2^{31}$, and integers greater than $2^{31}$ - 1 should be clamped to $2^{31}$ - 1.\n",
+    "  \n",
+    "- Return the integer as the final result.\n",
     "\n",
-    "Note:\n",
+    "Note:\\\n",
     "Only the space character ' ' is considered a whitespace character.\n",
     "Do not ignore any characters other than the leading whitespace or the rest of the string after the digits.\n",
     " "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Possible Cases:**\n",
+    "\n",
+    "- Whitespaces (' ')\n",
+    "- Digits ('0', '1', '2', '3', '4', '5', '6', '7', '8', '9')\n",
+    "- A sign ('+' or '-')\n",
+    "- Anything else (alphabetic characters, symbols, special characters, etc.)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,22 +61,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4193"
+       "987"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "atoi(\"4193 with words\")"
+    "atoi(\"  987\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atoi(\"  987\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "987"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"words and 987\")"
    ]
   },
   {
