july 5th update

--- a/4MedianOfArrays.ipynb
+++ b/4MedianOfArrays.ipynb
@@ -11,12 +11,12 @@
     "**Example 1:**\n",
     "Input: nums1 = [1,3], nums2 = [2]\\\n",
     "Output: 2.00000\\\n",
-    "Explanation: merged array = [1,2,3] and median is 2.\\\n",
+    "Explanation: merged array = [1,2,3] and median is 2.\n",
     "\n",
     "**Example 2:**\n",
     "Input: nums1 = [1,2], nums2 = [3,4]\\\n",
     "Output: 2.50000\\\n",
-    "Explanation: merged array = [1,2,3,4] and median is (2 + 3) / 2 = 2.5.\\\n",
+    "Explanation: merged array = [1,2,3,4] and median is (2 + 3) / 2 = 2.5.\n",
     " \n",
     "\n",
     "Constraints:\n",
@@ -31,17 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nums1 = [1,3]\n",
-    "nums2 = [2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +41,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nums1 = [1,2]\n",
+    "nums1 = [1,3]\n",
+    "nums2 = [2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums1 = [1,2,5]\n",
     "nums2 = [3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# O(m+n) method -> need to look through elements of both arrays\n",
+    "def med(nums1,nums2) -> int:\n",
+    "    temp = nums1 + nums2\n",
+    "    # even length\n",
+    "    if len(temp) % 2:\n",
+    "        return\n",
+    "    # odd length\n",
+    "    return "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0(log(m+n)) method -> log algorithm implies binary search"
    ]
   },
   {
