--- a/6ZigZagConversion.ipynb
+++ b/6ZigZagConversion.ipynb
@@ -9,30 +9,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convertZigZag(s,numRows):\n",
-    "    return s"
+    "def convert(s: str, numRows: int) -> str:\n",
+    "    # Base condition\n",
+    "    if s is None and numRows <= 0:\n",
+    "        return \"\"\n",
+    "    if numRows == 1:\n",
+    "        return s\n",
+    "    # Resultant string\n",
+    "    result = \"\"\n",
+    "    # step size\n",
+    "    step = 2 * numRows - 2\n",
+    "    # appends everything but the \"middle vaues\"\n",
+    "    for i in range(0,numRows,1):\n",
+    "        for j in range(i,len(s),step):\n",
+    "            result += s[j]\n",
+    "            if i !=0 and i!= numRows-1 and j+step-2*i < len(s):\n",
+    "                result += s[j + step - 2 * i] # \"middle\" values here - indices 04,05,10, & 11\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PINALSIGYAHRPI'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = \"PAYPALISHIRING\"\n",
-    "numRows = 3"
+    "numRows = 4\n",
+    "convert(s,numRows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PAHNAPLSIIGYIR'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"PAYPALISHIRING\"\n",
+    "numRows = 3\n",
+    "convert(s,numRows)"
+   ]
   },
   {
    "cell_type": "code",
