--- a/8String2Integer.ipynb
+++ b/8String2Integer.ipynb
@@ -40,28 +40,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
     "def atoi(s):\n",
     "    res = \"\"\n",
     "    sign = \"\"\n",
+    "\n",
+    "    if s.isspace() or len(s) == 0:\n",
+    "        return(0)\n",
+    "\n",
     "    for i in s:\n",
     "        if i == ' ':\n",
     "            continue\n",
-    "        if i == '+' or i == '-':\n",
+    "        if ((i == '+' or i == '-') and (sign == \"\")):\n",
     "            sign = i\n",
+    "        elif ((i == '+' or i == '-') and (sign != \"\")):\n",
+    "            return(0)\n",
     "        if i.isdigit():\n",
     "            res += i\n",
     "        if not i.isdigit() and res:\n",
     "            break\n",
-    "    return int(sign + res)"
+    "        if not i.isdigit() and not res and i != '+' and i != '-':\n",
+    "            return(0)\n",
+    "\n",
+    "    try:\n",
+    "        temp = int(sign + res)\n",
+    "    except:\n",
+    "        return(0)\n",
+    "        \n",
+    "    if temp < -2**(31): \n",
+    "        return(-2**(31))\n",
+    "    if temp > 2**(31)-1:\n",
+    "        return(2**(31)-1)\n",
+    "    return temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def atoi(s):\n",
+    "    number, sign = 0, 1\n",
+    "    # remove leading whitespace\n",
+    "    s = s.lstrip()\n",
+    "    # if string is empty, so return 0\n",
+    "    if not s: return 0\n",
+    "    # check minus charater\n",
+    "    if s[0] == \"-\":\n",
+    "        s = s[1:]\n",
+    "        sign = -1\n",
+    "    # check plus charater\n",
+    "    elif s[0] == \"+\":\n",
+    "        s = s[1:]\n",
+    "    # make foreach every charater\n",
+    "    for i in range(len(s)):\n",
+    "        if s[i] in \"0123456789\":\n",
+    "            number = number * 10 + int(s[i])\n",
+    "        else:\n",
+    "            break\n",
+    "    # check number is nol\n",
+    "    if number == 0: return 0\n",
+    "    # string converts to number\n",
+    "    number = sign * number\n",
+    "    int32_min, int32_max = -2**31, 2**31-1\n",
+    "    if number < int32_min: return int32_min\n",
+    "    if number > int32_max: return int32_max\n",
+    "    return number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"+\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"   \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +183,7 @@
        "987"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,31 +194,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "atoi(\"  987\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "987"
+       "-987"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"  -987\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "atoi(\"words and 987\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"42\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-42"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"    -42\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4193"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"4193 with words\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2147483648"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"-91283472332\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"+-12\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atoi(\"-+12\")"
    ]
   },
   {
