--- a/1-50/21Merge-Sorted-Lists.ipynb
+++ b/1-50/21Merge-Sorted-Lists.ipynb
@@ -13,14 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## note that Listnode initializations have a default value of 0\n",
     "class ListNode:\n",
     "    def __init__(self, val=0, next=None):\n",
     "        self.val = val\n",
     "        self.next = next\n",
+    "\n",
     "\n",
     "class Solution:\n",
     "    def mergeTwoLists(self,list1,list2):\n",
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,22 +42,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dummy = ListNode()\n",
+    "dummy.val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
     "    def mergeTwoLists(self, list1, list2):\n",
-    "        cur = dummy = ListNode()\n",
-    "        while list1 and list2:               \n",
-    "            if list1.val < list2.val:\n",
+    "\n",
+    "        dummy = ListNode(None) ## this initializes an empty ListNode for us to put stuff into\n",
+    "        cur = dummy ## point to dummy & add to its linked elements\n",
+    "\n",
+    "        while list1 and list2:           \n",
+    "\n",
+    "            if list1.val <= list2.val:\n",
     "                cur.next = list1\n",
-    "                list1, cur = list1.next, list1\n",
+    "                list1 =  list1.next\n",
+    "                \n",
     "            else:\n",
     "                cur.next = list2\n",
-    "                list2, cur = list2.next, list2\n",
+    "                list2 = list2.next\n",
+    "\n",
+    "            cur = cur.next ## IMPORTANT: point the head of the linked list to the next object\n",
+    "\n",
     "        if list1 or list2:\n",
     "            cur.next = list1 if list1 else list2\n",
+    "            \n",
     "        return dummy.next\n",
     "\n",
     "x = Solution()\n",
@@ -64,19 +96,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Expected Output: 1 -> 1 -> 2 -> 3 -> 4 -> 4\n",
+    "\n",
+    "res.val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 2\n"
+      "1 1 2 3 4 4 "
      ]
     }
    ],
    "source": [
-    "print(res.val,res.next.val, res.next.next.val)"
+    "## Utility function to print out linked lists\n",
+    "\n",
+    "def printList(linked):\n",
+    "    temp = linked\n",
+    "    while(temp):\n",
+    "        print(temp.val, end=\" \")\n",
+    "        temp = temp.next\n",
+    "\n",
+    "printList(res)"
    ]
   },
   {
