--- a/Others/392isSubsequence.ipynb
+++ b/Others/392isSubsequence.ipynb
@@ -11,40 +11,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "class Solution:\n",
+    "    \n",
+    "    def isSubsequence(self, s: str, t: str) -> bool:\n",
+    "        for char in s:\n",
+    "            temp = t.find(char)\n",
+    "\n",
+    "            if temp == -1:\n",
+    "                return False\n",
+    "\n",
+    "            t = t[temp+1: ]\n",
+    "\n",
+    "        return True\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = Solution()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Output: TRUE\n",
+    "s = \"abc\"; t = \"ahbgdc\"\n",
+    "x.isSubsequence(s,t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Output: FALSE\n",
+    "s = \"axc\"; t = \"ahbgdc\"\n",
+    "x.isSubsequence(s,t)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Follow up: Suppose there are lots of incoming s, say s1, s2, ..., sk where k >= 109, and you want to check one by one to see if t has its subsequence. In this scenario, how would you change your code?"
+    "Follow up: Suppose there are lots of incoming s, say $$s_1, s_2, ..., s_k$$ where $$k \\geq 10^9$$ and you want to check one by one to see if t has its subsequence. In this scenario, how would you change your code?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -54,7 +98,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.3"
   },
   "orig_nbformat": 4,
